[project]
name = "bci-poc"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pylsl>=1.16.2",
    "python-osc>=1.8.3",
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "websockets>=12.0",
    "streamlit>=1.49.1",
    "pandas>=2.3.2",
    "altair"
]
